--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
     <title>Hello Web - Processing.js Test</title>
+    <script src="jquery-3.4.1.min.js"></script>
     <script src="processing.js"></script>
 </head>
 <body>
     <h1>Processing.js Test</h1>
     <p>This is my first Processing.js web-based sketch:</p>
-    <canvas data-processing-sources="game.pde tilemap.pde camera.pde player.pde"></canvas>
+    <canvas data-processing-sources="game.pde tilemap.pde camera.pde player.pde monster.pde"></canvas>
 </body>
 </html>
